<resources>
    <string name="app_name">ProfNotes</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Utils -->
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>

    <!-- Login -->
    <string name="login">Вход</string>
    <string name="hintLogin">Пожалуйста, войдите для продолжения</string>
    <string name="hintLoginOrPhone">Номер телефона или логин</string>
    <string name="password">Пароль</string>
    <string name="loginWithoutAccount">Или войдите без аккаунта, если не хотите пользоваться всеми возможностями</string>
    <string name="hintForgotPassword">Не помните свой пароль? Восстановите пароль</string>
    <string name="btnLogin">Войти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home -->
    <string name="goodMorning">Доброе утро,</string>
    <string name="today">Сегодня</string>
    <string name="news">Новости</string>
    <string name="hintSearch">Поиск по заметкам</string>
    <string name="labelNewNotes">Новые заметки %1$</string>
    <string name="labelMyTasks">Мои задачи %1$</string>
    <string name="allTasks"> <u>Все задачи</u> </string>

    <!-- New Note -->
    <string name="textLabelNewNotePage">Новая запись</string>
    <string name="btnTextNewNote">Заметка</string>
    <string name="btnTextNewTask">Задача</string>
    <string name="CreateAccount">Создать Аккаунт</string>
    <string name="registration">Регистрация</string>
    <string name="hint_registration">Пожалуйста, введите данные для новой учетной записи</string>
    <string name="hint_name">Имя</string>
    <string name="btn_registration">Регистрация</string>
    <string name="enter_user_account">Войти с учетной записью</string>
    <string name="new_note_head">Новая заметка</string>
    <string name="hint_new_note_text">Начните вводить текст здесь</string>
    <string name="new_note_descrition">Описание заметки</string>
    <string name="friends_circle">Круг друзей</string>
    <string name="friends_search">Поиск по друзьям</string>
    <string name="create_new_note">Создать заметку</string>
    <string name="tv_task_status_new">Новое</string>
    <string name="tv_change_status">Сменить статус</string>

</resources>