<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/page_margin"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLogo"
            style="@style/LogoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circe_extra_bold"
            android:text="@string/app_name"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/containerLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/containerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextH1.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration" />

            <TextView
                style="@style/TextH5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hint_registration"
                android:textColor="@color/gray" />

            <EditText
                android:id="@+id/etName"
                style="@style/TextH3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="username"
                android:background="@drawable/bg_login_edit_text"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/etEmailOrPhone"
                style="@style/TextH3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="username"
                android:background="@drawable/bg_login_edit_text"
                android:hint="@string/hintLoginOrPhone"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/TextH3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/bg_login_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerButtons"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btnLogin"
                style="@style/TextH1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_button"
                android:enabled="true"
                android:gravity="center_horizontal|center_vertical"
                android:padding="12dp"
                android:text="@string/btn_registration"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/tvCreateAccount"
                style="@style/TextH3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/enter_user_account"
                android:gravity="center_horizontal"
                android:textColor="@color/gray" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>